2002-03-30  Darin Adler  <darin@apple.com>

	* src/kdelibs/khtml/xml/dom_docimpl.cpp: (DocumentImpl::setTitle):
	Call through to a new KHTMLPart::setTitle instead of the old
	setWindowCaption. We want to skip the special logic for using
	the URL if the title is blank, and for squeezing the title into
	a smaller string, because those are handled at a higher level.

	* src/kwq/KWQKHTMLPart.h: Add setTitle. Also clean up ifdefs.
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::setTitle): New. Calls
	[IFWebDataSource _setTitle].

	* src/kwq/kparts/part.h: Removed setWindowCaption.
	* src/kwq/KWQPart.mm: Removed setWindowCaption.

	* src/kwq/external.h: Add [IFWebDataSource _setTitle].

2002-03-30  Richard Williamson  <rjw@apple.com>

        Added support for scrolling to anchor points.
        Optimization:  we always load the page, even if the URL that contains
        the anchor is the current page.
        
	* src/kwq/KWQKHTMLPart.h:
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::end), (KHTMLPart::gotoBaseAnchor),
	(KHTMLPart::gotoAnchor), (KHTMLPart::setUserStyleSheet):
	* src/kwq/KWQScrollView.mm: (QScrollView::setContentsPos):

2002-03-30  Richard Williamson  <rjw@apple.com>

        Added log to note cases of NSURL (CFURL) being unable to
        correctly initialize from URLs.  This log will likely indicate
        bugs in CFURL.
        
	* src/kwq/KWQKHTMLPart.mm: (KHTMLPart::requestFrame):

2002-03-30  Richard Williamson  <rjw@apple.com>

        Twiddling with baselines.  kde 2.2 appears to not line up baselines correctly.
        Need to experiment with kde 3.
        
        Removed copy of function prototype, instead included the correct header.
 
	Fixed crasher in setFocusPolicy, I don't think we even need to use kde's focus policy.
        This was added during the kde 3 beta 2 merge.
       
	* src/kwq/KWQFontMetrics.mm: (-[KWQLayoutInfo
	drawString:atPoint:withFont:color:]), (-[KWQLayoutInfo
	drawUnderlineForString:atPoint:withFont:color:]), (-[KWQLayoutInfo